# casper-node

./: .gitignore
execution_engine/src/engine_state/: mod.rs  step.rs
execution_engine/src/execution/: executor.rs
execution_engine/src/runtime/: mod.rs
node/: Cargo.toml
node/src/: types.rs
node/src/components/: consensus.rs  network.rs  transaction_acceptor.rs
node/src/components/block_accumulator/: tests.rs
node/src/components/block_synchronizer/: signature_acquisition.rs  tests.rs
node/src/components/block_validator/: tests.rs
node/src/components/consensus/: cl_context.rs  config.rs  consensus_protocol.rs  era_supervisor.rs  signer.rs  traits.rs
node/src/reactor/: main_reactor.rs
node/src/testing/: network.rs
node/src/types/: node_signer.rs  sync_leap.rs  validator_matrix.rs
node/src/utils/: external.rs
resources/local/: chainspec.toml.in
resources/production/: chainspec.toml
resources/test/: sse_data_schema.json
smart_contracts/contracts/client/add-to-whitelist/: Cargo.toml
smart_contracts/contracts/client/add-to-whitelist/src/: main.rs
storage/src/data_access_layer/: auction.rs
storage/src/system/: auction.rs  genesis.rs
types/src/: auction_state.rs  block.rs  crypto.rs  gens.rs  testing.rs
types/src/block/: finality_signature.rs
types/src/chainspec/: core_config.rs
types/src/crypto/: asymmetric_key.rs  error.rs  signer.rs
types/src/system/: auction.rs
types/src/transaction/: transaction_entry_point.rs  transaction_v1.rs
utils/global-state-update-gen/src/: generic.rs
utils/validation/src/: generators.rs
(+53 files in other folders)
