[package]
name = "add-to-whitelist"
version = "0.1.0"
authors = ["Jacek Chmielewski <jchmielewski@teonite.com>"]
edition = "2018"

[[bin]]
name = "add_to_whitelist"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
